# Funcai

./: .gitignore  LICENSE  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
src/FuncGemmaCall/: model.py  parser.py
src/Funcai/: funcgemma.py
src/Funcai/FuncGemma/: model.py  parser.py
src/Funcall/: funcgemma.py
src/Funcall/FuncGemma/: parser.py  utils.py
tests/: test_funcgemma.py
tests/conftest/: conftest.py
tests/utils/: Functions.py
