[project]
name = "FuncGemmaCall" # Must be a unique name on PyPI
version = "0.0.1"
description = "A script to use Function Gemma capabilities."
authors = [
    { name = "Ali Rezagholizadeh", email = "alirezagholizadeh70@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project.urls]
Homepage = "https://github.com"
Issues = "https://github.com/issues"
